Changing WebRender prefs doesn't work live anymore on Mac
Categories
(Core :: Graphics: WebRender, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox72 | --- | unaffected |
firefox73 | --- | unaffected |
firefox74 | --- | verified |
People
(Reporter: jrmuizel, Assigned: aosmond)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Reporter | ||
Comment 1•5 years ago
|
||
My guess is that this was broken by bug 1592016
Reporter | ||
Comment 2•5 years ago
|
||
I was wrong. It was actually bug 1600472.
Reporter | ||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 3•5 years ago
|
||
Do you have a priority in mind for this? Thanks!
Reporter | ||
Updated•5 years ago
|
Assignee | ||
Comment 4•5 years ago
|
||
It looks like this is because CompositorBridgeParent::InitializeStatics() isn't called unless WebRender is in the GPU process. Without that you won't get notifications. I can reproduce by disabling the GPU process on Linux.
Assignee | ||
Comment 5•5 years ago
|
||
Comment 7•5 years ago
|
||
bugherder |
Comment 8•5 years ago
|
||
Is this issue about the gfx.webrender.all preference on Mac OS ? are there any steps to verify this issue? I'm not sure what Webrender prefs do not work live means because I was able to enable WebRender by setting gfx.webrender.all = true in Release as well.
Assignee | ||
Comment 9•5 years ago
|
||
This refers to the gfx.webrender.debug.* prefs in about:config. For example, if you toggle gfx.webrender.debug.picture-caching to true when WebRender is in use, then you should immediately (e.g. live pref) see a multi-coloured overlay showing the picture cache surfaces. On Mac this was broken so you had to restart the browser in order for the prefs to take effect.
Comment 10•5 years ago
|
||
Thank you for the extra info, This issue is Verified as Fixed in our latest Beta 74.0b5 and Nightly builds.
Description
•