Bug 1609268 - Make WebRender debug prefs apply live without the GPU process. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D60055