gfx/ipc/GPUProcessManager.cpp
@@ -91,6 +91,7 @@ GPUProcessManager::GPUProcessManager()
   mDeviceResetLastTime = TimeStamp::Now();
 
   LayerTreeOwnerTracker::Initialize();
+  CompositorBridgeParent::InitializeStatics();
 }
 
 GPUProcessManager::~GPUProcessManager() {
